# testAgileProject

./: pyproject.toml  report.html
pages/: base_page.py  index_page.py  index_page_locators.py  login_success_page.py  login_success_page_locators.py  mini_statement_page.py  mini_statement_page_locators.py  register_page.py  register_page_locators.py  register_success_page.py  register_success_page_locators.py
resources/: constants.py
tests/: conftest.py  test_index_page.py  test_login.py  test_login_logout.py  test_mini_statement_page.py  test_utils.py
