[tool.poetry]
name = "testtravelwebsiteproject"
version = "0.1.0"
description = ""
authors = ["sveta <sveta.solog@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
selenium = "4.23.1"
pytest = "8.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
